# JX_agent

./: .env_example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  start-dev.bat
core/: config.py  database.py  dependencies.py  exceptions.py  security.py
docs/: blueprint.md  绩效智能体功能蓝图_0129.docx  绩效智能体测试数据.docx
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
graphs/: a_graph.py  c_graph.py  d_graph.py  db_helper.py  p_graph.py
models/: action_phase.py  check_phase.py  do_phase.py  organization.py  period.py  plan_phase.py  token.py  user.py
scripts/: seed_demo_data.py  verify_a_stage_demo.py  verify_c_stage_demo.py  verify_d_stage_demo.py  verify_demo_data.py  verify_mock_llm_cases.py  verify_p_stage_contract.py  verify_pdca_demo_flow.py
tests/: test_action_inheritance_suggestion_payload.py  test_action_object_permissions.py  test_action_review_report_fallback.py  test_auth_logout.py  test_check_object_permissions.py  test_check_score_validation.py  test_check_stage_calculations.py  test_data_checkin_contract.py  test_evaluation_submission_atomicity.py  test_final_result_integrity.py  test_indicator_metadata_response.py  test_llm_execution_and_action_review.py  test_period_history.py  test_period_update.py  test_plan_ai_logging.py  test_plan_confirmation_transaction.py  test_plan_indicator_mapping.py  test_plan_inheritance_mapping.py  test_plan_permissions_and_targets.py  test_text_formatting.py
utils/: calculations.py  llm.py  mock_llm.py  (+1 more)
(+110 files in other folders)
